src/app/home/components/toolbar/toolbar.component.css
/* Estilos de la barra de herramientas */
mat-toolbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 20px;
}

/* Espaciadores en ambos extremos para separar ítems */
.mat-spacer {
  flex: 1 1 auto;
}

/* Estilos para los enlaces de navegación */
.nav-link {
  font-size: 16px;
  font-weight: bold;
  color: white;
  margin: 10px 0; /* Espaciado vertical */
}


/* Estilos para los íconos adicionales */
.user-avatar {
  width: 30px;
  height: 30px;
  border-radius: 50%;
  margin-top: -5px;
  margin-left: -3px;
}



/* Media queries para dispositivos móviles */
@media (max-width: 768px) {
  mat-toolbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;

  }
  .nav-link {
    font-size: 16px;
    font-weight: bold;
    color: white;
    margin: 10px 0; /* Espaciado vertical */
  }
}

